--- a/web-app/src/app/pages/books/books-page.scss
+++ b/web-app/src/app/pages/books/books-page.scss
@@ -21,11 +21,6 @@ button[mat-fab] {
   display: flex;
   flex-direction: column;
   transition: transform 0.3s ease;
-
-  a {
-    text-decoration: none;
-    color: #333;
-  }
 }
 
 .book-card:hover {
